
name:                lubeck-dv
version:             0.1.0.0
synopsis:            Data visualization based on lubeck-drawing
license:             MIT
license-file:        LICENSE
author:              Hans Höglund
maintainer:          hans@beautifuldestinations.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Lubeck.DV
                     , Lubeck.DV.New
                     , Lubeck.DV.Styling
                     , Lubeck.DV.ColorPalette
                     , Lubeck.DV.LineStyles
                     , Lubeck.DV.Internal.Normalized
                     , Lubeck.DV.Internal.Table
                     , Lubeck.DV.Internal.ZipListMonad
                     , Lubeck.DV.Internal.Render
  build-depends:       base
                     , base-prelude
                     , lubeck-core
                     , contravariant
                     , mtl
                     , transformers
                     , containers
                     , time
                     , lens
                     , colour
                     , linear
                     , lubeck-drawing
                     , lubeck-frp
                     , neat-interpolation
                     , boxes
                     , temporary
                     , directory
                     , generic-deriving
                     -- TODO test suite only (@stack repl@ confuses these)
                     , process
                     , temporary
                     , directory
                     , bytestring
                     , cryptohash
                     , aeson
                     , filepath
  hs-source-dirs:      src
  default-language:    Haskell2010
  -- ghc-options:         -fno-warn-typed-holes


test-suite lubeck-dv-test-main
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  build-depends:       base
                     , base-prelude
                     , lubeck-core
                     , contravariant
                     , mtl
                     , transformers
                     , containers
                     , time
                     , lens
                     , colour
                     , linear
                     , lubeck-drawing
                     , neat-interpolation
                     , boxes
                     , directory
                     , temporary
                     , lubeck-dv

                     , process
                     , temporary
                     , directory
                     , bytestring
                     , cryptohash
                     , aeson
                     , filepath
                     , text

test-suite lubeck-dv-test-table
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Table.hs
  build-depends:       base
                     , base-prelude
                     , lubeck-core
                     , contravariant
                     , mtl
                     , transformers
                     , containers
                     , time
                     , lens
                     , colour
                     , linear
                     , lubeck-drawing
                     , neat-interpolation
                     , boxes
                     , directory
                     , temporary
                     , lubeck-dv
                     , QuickCheck

executable lubeck-dv-profiling
  hs-source-dirs:      bench
  main-is:             Profiling.hs
  -- ghc-options:         -Wall
  build-depends:       base
                     , base-prelude
                    --  , lens
                    --  , linear
                    --  , colour
                     , lubeck-core
                     , lubeck-frp
                     , lubeck-dv
                     , lubeck-drawing
                     , random
                     , lens
  -- if impl(ghcjs)
    -- build-depends:     ghcjs-base
                    --  , lubeck-web
                    --  , virtual-dom
                    --  , benchmark
  default-language:    Haskell2010

executable lubeck-dv-growth-graph2
  hs-source-dirs:      test
  main-is:             GrowthGraph2.hs
  ghc-options:         -Wall
  build-depends:       base
                     , base-prelude
                     , lens
                     , linear
                     , colour
                     , mtl
                     , time
                     , containers
                     , contravariant
                     , transformers
                     , MonadRandom
                     , lubeck-core
                     , lubeck-drawing
                     , lubeck-frp
                     , lubeck-dv
                     , neat-interpolation
                     , MonadRandom
  if impl(ghcjs)
    build-depends:     ghcjs-base
                    --  , lubeck-web
                     , virtual-dom
                     , benchmark
  default-language:    Haskell2010
