
name:                lubeck-web
version:             0.1.0.0
synopsis:            Lubeck web libraries
license:             AllRightsReserved
license-file:        LICENSE
author:              Beautiful Destinations
maintainer:          hans@beautifuldestinations.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Lubeck.App
                     , Lubeck.Util
                     , Lubeck.Forms
                     , Lubeck.Types
                     , Lubeck.Forms.Basic
                     , Lubeck.Forms.Button
                     , Lubeck.Forms.Select
                     , Lubeck.Forms.Interval
                     , Lubeck.Forms.File
                     , Lubeck.Html
                     , Lubeck.Web.History
                     , Lubeck.Web.URI
                     , Components.Notifications
                     , Components.BusyIndicator
                     , Components.MainMenu
                     , Components.Map
                     , Components.Grid
                     , Components.Layout
                     , Components.Masonry
                     , Components.ConfirmDialog
                     , BDPlatform.HTMLCombinators

  build-depends:       base
                     , base-prelude
                     , virtual-dom
                     , data-interval
                     , time
                     , aeson
                     , lens
                     , stm
                     , data-default
                     , containers
                     , random
                     , lubeck-frp
  if impl(ghcjs)
    build-depends:     ghcjs-base
                     , ghcjs-ffiqq

  hs-source-dirs:      src
  default-language:    Haskell2010
