
name:                lubeck-server
version:             0.1.0.0
synopsis:            A simple Elm-Reactor style server
license:             AllRightsReserved
license-file:        ../LICENSE
author:              Beautiful Destinations
maintainer:          hans@beautifuldestinations.com
build-type:          Simple
cabal-version:       >=1.10

executable lubeck-server
  main-is:             Main.hs
  build-depends:       base           >=4.8 && <4.9
                     , servant        ==0.4.4.5
                     , servant-server ==0.4.4.5
                     , warp           ==3.1.10
                     , parsers
                     , parsec
                     , mtl
                     , process
                     , containers
                     , directory

  hs-source-dirs:      src
  default-language:    Haskell2010
