
name:                test
version:             0.1.0.0
-- synopsis:            A lightweight FRP implementation
license:             AllRightsReserved
-- license-file:        LICENSE
author:              Beautiful Destinations
maintainer:          hans@beautifuldestinations.com
build-type:          Simple
cabal-version:       >=1.10

-- library
--   exposed-modules:     Lubeck.FRP
--                      , Lubeck.FRP.Events
--                      , Lubeck.FRP.History
--   build-depends:       base
--                      , stm
--                      , contravariant
--                      , vector
--                      , profunctors
--                      , text
--                      , mtl
--                      , transformers
--                      , time
--                      , containers
--                      , unordered-containers
--                      , semigroups
--                      , lubeck-core
--   if impl(ghcjs)
--     build-depends:     ghcjs-base
--   hs-source-dirs:      src
--   default-language:    Haskell2010
--   ghc-options:         -fno-warn-typed-holes
--

executable test
  hs-source-dirs:      src
  -- js-sources:          jsbits/renderer.js
  -- js-sources:          ../main.out.js
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , base-prelude
                     , ghcjs-base
                     , MonadRandom
                     , mtl
                     , transformers
                    --  , lens
                    --  , linear
                    --  , colour
                    --  , lubeck-core
                    --  , lubeck-frp
  -- if impl(ghcjs)
    -- build-depends:     ghcjs-base
                    --  , lubeck-web
                    --  , virtual-dom
                    --  , benchmark
  default-language:    Haskell2010
